fixed search bar on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
   height: 100%; 
+  overflow-x: hidden;
 }
+
 
